--- a/frontend/src/styles/fonts.css
+++ b/frontend/src/styles/fonts.css
@@ -1,40 +1,17 @@
-@import "tailwindcss";
-
 /* Manrope font family */
 
 @font-face {
   font-family: "Manrope";
-  src: url("/src/assets/fonts/Manrope/static/Manrope-Bold.ttf");
-}
-
-@font-face {
-  font-family: "Manrope";
-  src: url("/src/assets/fonts/Manrope/static/Manrope-ExtraBold.ttf");
-}
-
-@font-face {
-  font-family: "Manrope";
-  src: url("/src/assets/fonts/Manrope/static/Manrope-ExtraLight.ttf");
-}
-
-@font-face {
-  font-family: "Manrope";
-  src: url("/src/assets/fonts/Manrope/static/Manrope-Light.ttf");
-}
-
-@font-face {
-  font-family: "Manrope";
-  src: url("/src/assets/fonts/Manrope/static/Manrope-Medium.ttf");
-}
-
-@font-face {
-  font-family: "Manrope";
   src: url("/src/assets/fonts/Manrope/static/Manrope-Regular.ttf");
+  font-weight: 400; 
+  font-style: normal;
 }
 
 @font-face {
   font-family: "Manrope";
   src: url("/src/assets/fonts/Manrope/static/Manrope-SemiBold.ttf");
+  font-weight: 600; 
+  font-style: normal;
 }
 
 /* Sora font family */
@@ -42,41 +19,13 @@
 @font-face {
   font-family: "Sora";
   src: url("/src/assets/fonts/Sora/static/Sora-Bold.ttf");
-}
-
-@font-face {
-  font-family: "Sora";
-  src: url("/src/assets/fonts/Sora/static/Sora-ExtraBold.ttf");
-}
-
-@font-face {
-  font-family: "Sora";
-  src: url("/src/assets/fonts/Sora/static/Sora-ExtraLight.ttf");
-}
-
-@font-face {
-  font-family: "Sora";
-  src: url("/src/assets/fonts/Sora/static/Sora-Light.ttf");
-}
-
-@font-face {
-  font-family: "Sora";
-  src: url("/src/assets/fonts/Sora/static/Sora-Medium.ttf");
+  font-weight: 600; 
+  font-style: normal;
 }
 
 @font-face {
   font-family: "Sora";
   src: url("/src/assets/fonts/Sora/static/Sora-Regular.ttf");
+  font-weight: 400; 
+  font-style: normal;
 }
-
-@font-face {
-  font-family: "Sora";
-  src: url("/src/assets/fonts/Sora/static/Sora-SemiBold.ttf");
-}
-
-@font-face {
-  font-family: "Sora";
-  src: url("/src/assets/fonts/Sora/static/Sora-Thin.ttf");
-}
-
-
