--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@import "./styles/fonts.css";
+@import "./fonts.css";
 @import "./typography.css";
 
 @custom-variant dark (&:is(.dark *));
