--- a/frontend/src/lib/css/index.css
+++ b/frontend/src/lib/css/index.css
@@ -1,9 +1,15 @@
 @import "tailwindcss";
-
 @import "tw-animate-css";
+
+@import "./fonts.css";
 
 @custom-variant dark (&:is(.dark *));
 
+
+/**
+ * If you ever need to edit these, please use
+ * https://tweakcn.com/editor/theme
+ */
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
@@ -12,23 +18,23 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
+  --primary: oklch(0.3524 0.1848 303.2980);
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
+  --secondary: oklch(0.8828 0.1810 94.4680);
   --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
+  --muted: oklch(0.9500 0 0); /* default: oklch(0.9700 0 0); */
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
+  --accent: oklch(0.872 0.01 258.338); /* default: oklch(0.9700 0 0); */
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
+  --chart-1: oklch(0.81 0.1 252);
+  --chart-2: oklch(0.62 0.19 260);
+  --chart-3: oklch(0.55 0.22 263);
+  --chart-4: oklch(0.49 0.22 264);
+  --chart-5: oklch(0.42 0.18 266);
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
@@ -37,6 +43,14 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+  /* Not part of default theme */
+  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+
+  /* Custom colors (not part of shadcn theme)  */
+  --color-body: oklch(0.9607 0.0095 320.55);
 }
 
 .dark {
@@ -109,13 +123,31 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  /* Custom colors (not part of shadcn theme) */
+  --color-body: var(--color-body);
+
+  --font-sans: Sora, ui-sans-serif, sans-serif, system-ui;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+
+  /* Custom fonts (not part of shadcn theme) */
+  --font-sora: Sora, ui-sans-serif, sans-serif, system-ui;
+  --font-manrope: Manrope, ui-sans-serif, sans-serif, system-ui;
+
 }
 
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    font-synthesis: none !important;
   }
+
   body {
     @apply bg-background text-foreground;
+
+    /* NOT PART OF SHADCN */
+    background: var(--color-body) !important;
+    letter-spacing: var(--tracking-normal);
   }
 }
